# claude_cortex

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .jj  .mcp.json  .mcpbignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  build.zig  build.zig.zon  manifest.json  package.json  pyproject.toml  pyrightconfig.json  server.json  typecheck-baseline.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect.md  code-reviewer.md  devops-engineer.md  engineer.md  refactorer.md  security-auditor.md  test-engineer.md
.claude/workflows/: clinical-graph-rebuild.js
.codex/: config.toml
.codex/agents/: architect.toml  code-reviewer.toml  data-scientist.toml  dba.toml  devops-engineer.toml  engineer.toml  experiment-runner.toml  frontend-engineer.toml  latex-engineer.toml  mlops.toml  orchestrator.toml  paper-writer.toml  professor.toml  refactorer.toml  research-scientist.toml  reviewer-academic.toml  security-auditor.toml  test-engineer.toml  ux-designer.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: audit-finding.yml  bug.yml
.github/workflows/: ci.yml  publish-ccplugins.yml  release.yml
.memsearch/memory/: 2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-31.md
agents/: cortex-wiki-groomer.md
benchmarks/: _repro.py
benchmarks/beam/: run_benchmark.py
benchmarks/entity_dedup/: run_benchmark.py
benchmarks/gate_precision/: run_benchmark.py
benchmarks/lib/: _e2_conditions.py  blend_weight_sweep.py  db_setup.py  db_snapshot.py  decay_sweep_runner.py  e2_subsample_runner.py  n_scan_runner.py  run_e1_v3_locomo.py  verification_report.py
benchmarks/llm_head_to_head/: __init__.py  cortex_caller.py  manifest.py
benchmarks/locomo/: run_benchmark.py
benchmarks/longmemeval/: run_benchmark.py
benchmarks/streaming_calibration/: results.json  run.py
benchmarks/supersession_gate/: README.md  guard_atomic_upperbound.py  guard_chunk_granularity.py  guard_session_granularity.py
commands/: methodology.md
docs/: api-reference.md  architecture.md  database-url-migration.md  deployment-scenarios.md  native-rewrite.md  safeskill-report.json  testing-guide.md  troubleshooting.md
docs/arxiv-context-assembly/: main.aux  main.out  main.tex
docs/arxiv-thermodynamic/: main.tex
docs/benchmarks/: e1-v3-locomo-results-post-fix.md  e1-v3-locomo-results.md  e1-v3-results.md
docs/invariants/: cortex-invariants.md
docs/papers/: appendix-popper-falsifiability.md  arxiv-endorsement-email.md  bibliography.md  linkedin-endorser-post.md  research-post-context-assembly.md  science.md  thermodynamic-memory-vs-flat-importance.md
docs/program/: gitnexus-competitive-analysis.md
docs/provenance/: beam-10m-llm-head-to-head-protocol.md  blend-weight-calibration.md  bounded-io-phase2-design.md  bounded-io-plan.md  ingest-ecosystem-fix-plan.md  verification-measurement-discipline.md  verification-protocol.md
docs/release-notes/: v3.19.0.md  v3.19.1.md  v3.19.2.md  v3.19.3.md  v3.19.4.md  v3.19.5.md
docs/reports/: crtx-post-merge-audit.html
docs/research/: wiki-classification-survey.md
mcp_server/: __main__.py  doctor.py  doctor_mcp.py  mcp_progress.py  tool_error_handler.py  tool_registry_advanced.py  tool_registry_core.py  tool_registry_ingest.py  tool_registry_manage.py  tool_registry_memory.py  tool_registry_nav.py  tool_registry_wiki.py
mcp_server/core/: ablation.py  ablation_report.py  ast_extractor_registry.py  ast_extractors_clike.py  ast_extractors_jvm.py  ast_extractors_scripting.py  ast_parser.py  auto_curator.py  auto_task_record.py  cascade_advancement.py  codebase_communities.py  codebase_graph.py  codebase_parser.py  compression.py  consolidation_engine.py  decay_cycle.py  emergence_metrics.py  entity_dedup.py  entity_dedup_filters.py  gist_extraction.py  graph_quality_scorer.py  neurogenesis.py  pg_recall.py  predictive_coding_gate.py  predictive_coding_signals.py  prospective.py  recall_pipeline.py  reconsolidation.py  response_budget.py  retrieval_dispatch.py  sleep_compute.py  titans_memory.py  two_stage_model.py  wiki_axis_registry.py  wiki_classifier.py  wiki_coverage.py  (+15 more)
scripts/: check_pyright_ratchet.py  cortex_ingest.py  dev_run_ingest.py  dump_snapshot.py  install-plugin.sh  launcher.py  regenerate_file_docs.py  setup.py  setup.sh  setup_db.py  wiki-pilot-report.md  wiki_backfill_ids.py  wiki_bulk_migrate.py  wiki_pilot_migration.py  wiki_rebucket_file_docs.py
src/: cortex.zig  main.zig  tests.zig
tasks/: axonovia-cto-interview-prep.md  borrow-from-supermemory-handover.md  bounded-io-plan.md  db-config-hardening.md  e1-v3-locomo-resume-stop.md  e1-v3-locomo-smoke-finding.md  graph-navigation-architecture.md  graph-slim-wire-design.md  overnight-assembly-findings-2026-06-11.md  profile-readme-draft.md  pyright-remediation-plan.md  readme-revision-plan.md  viz-fix-status.md
tests_js/: spatial_hash.test.js
tests_py/: conftest.py  test_conftest_pg_skip.py  test_doctor_mcp.py  test_ingest_progress.py  test_main.py
ui/: unified-viz.html
(+407 files in other folders)
