[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuro-cortex-memory"
version = "3.21.0"
description = "Scientifically-grounded memory system based on computational neuroscience research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["mcp", "claude-code", "memory", "cognitive-profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/cdeust/Cortex"
Repository = "https://github.com/cdeust/Cortex"

[project.scripts]
# Cortex's only supported install path is Anthropic's plugin marketplace
# (`/plugin install cortex@cortex-plugins`). The marketplace clones this
# repo into ~/.claude/plugins/cache/cortex-plugins/cortex/<version>/ and
# Claude Code spawns the MCP server + hooks via scripts/launcher.py
# (see .mcp.json + .claude-plugin/plugin.json). Cortex is NOT published
# to PyPI and uvx-based invocation is NOT supported.
# The single console script below is for local CLI use of the doctor
# from a checkout (not from a PyPI install).
cortex-doctor = "mcp_server.doctor:run"

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "pgvector>=0.3",
]
sqlite = [
    "sqlite-vec>=0.1.1",
]
codebase = [
    "tree-sitter>=0.24.0,<0.26",
    # Pin <1.7 because tree-sitter-language-pack 1.7.0+ changed the Parser
    # API; calls like `parser.parse(...)` raise AttributeError on instances
    # of `builtins.Parser`. Migration to the new API is tracked separately.
    "tree-sitter-language-pack>=0.24.0,<1.7",
    "networkx>=3.0",
    # Leiden community detection (Traag et al. 2019) — strict improvement
    # over Louvain. igraph supplies the graph backend leidenalg runs on.
    # detect_communities falls back to networkx Louvain when absent.
    "leidenalg>=0.10",
    "igraph>=0.11",
]
# CPU-only graph viz path: precomputed igraph layout + Datashader tile
# rendering + Apache Arrow streaming for client-side hit-test. Enables
# the /api/tile + /api/quadtree + /api/recompute_layout endpoints. No
# GPU dependency. Install size ≈ 200 MB (numba + llvmlite dominate).
viz-tile = [
    "igraph>=0.11",              # CPU layout (DrL / FR), MIT-licensed wheels
    "datashader>=0.16.3",        # tile rasterization, O(viewport pixels)
    "pyarrow>=15.0",             # Arrow IPC for the quadtree endpoint
    "pandas>=2.2",               # Datashader's native frame format
    "cachetools>=5.0",           # L1 in-memory tile LRU
    "Pillow>=10.0",              # PNG encode
]
benchmarks = [
    "datasets>=2.14.0",          # HuggingFace dataset loader (BEAM, LoCoMo, LongMemEval)
    "sentence-transformers>=2.2.0",  # all-MiniLM-L6-v2 embeddings
    "flashrank>=0.2.0",          # cross-encoder reranking (ms-marco-MiniLM-L-12-v2)
    "psycopg[binary]>=3.1",      # PostgreSQL driver
    "pgvector>=0.3",             # vector similarity in PostgreSQL
    "pymupdf>=1.24.0",           # PDF parsing for some benchmark sources
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    # Surface hanging tests in CI instead of stalling the whole runner.
    # source: 2026-05-25 CI on commit 148d5a1 — Test (Python 3.12)
    # hung silently >3h on a single pytest invocation; no per-test
    # timeout meant no way to identify the offender. 300s is generous
    # vs current measurements; @pytest.mark.timeout(N) opts out per test.
    "pytest-timeout>=2.3.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"ui" = "mcp_server/ui"

[tool.ruff]
# Agent worktrees under .claude/worktrees/ are transient copies of the
# repo (for parallel agent runs) — they are not project source and must
# not be format/lint-checked. Without this, `ruff format --check .` (CI)
# trips on whatever uncommitted state an agent worktree happens to hold.
extend-exclude = [".claude"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]
# source: 2026-05-25 CI stall on 148d5a1 — Test (Python 3.12) hung >3h
# on a single pytest invocation with no per-test timeout to identify
# the offender. Thread method is required: signal-based timeouts
# conflict with pytest-asyncio's non-main-thread test runs.
timeout = 300
timeout_method = "thread"
markers = [
    "invariants: Phase 0.3+ testable invariant predicates (I1/I2/I3/I4 and parity tests)",
]

[tool.coverage.run]
source = ["mcp_server"]

[tool.coverage.report]
show_missing = true
